--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,12 @@ console.py
 
 airflow/dags/constants.py
 airflow/dags/__pycache__
+airflow/dags/code/__pycache__
 airflow/dags/tests/__pycache__
 airflow/dags/test.py
 airflow/dags/code/*.txt
 airflow/dags/code/*.json
 
-airflow/dags/old/
+airflow/dags/code/old/
 airflow/logs/
 postgres/weather_postgres_data
