Adding code to ingest demographics data from US Census API

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 src
 console.py
 
-airflow/dags/constants.py
+airflow/dags/code/constants.py
 airflow/dags/__pycache__
 airflow/dags/code/__pycache__
 airflow/dags/tests/__pycache__
