Added extract date to ingestion of Zillow house listings Added proper setup for initialization of database Removed SQL code to create each table in DAG ingestion scripts Renamed database from weather to real_estate_properties Modified .env file to define a few more environmental variables and the docker-compose.yaml file to properly read in the .env file Modified DAG scripts to use environmental variables instead of locally defined variables (e.g. PG_HOST, PG_USER, etc.)

--- a/airflow/.env
+++ b/airflow/.env
@@ -1,5 +1,10 @@
 AIRFLOW_UID=50000
 
-POSTGRES_USER=airflow
-POSTGRES_PASSWORD=airflow
-POSTGRES_DB=weather
+POSTGRES_HOST=pgdatabase
+POSTGRES_PORT=5432
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_DB=real_estate_properties
+
+CENSUS_YEAR=2020
+CENSUS_DATASET=acs5
