Added more tests for Weather API codebase

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 src
 console.py
+dfasdf.py
 
 airflow/dags/code/constants.py
 airflow/dags/__pycache__
 airflow/dags/code/__pycache__
-airflow/dags/tests/__pycache__
+airflow/dags/code/tests/__pycache__
 airflow/dags/test.py
 airflow/dags/code/*.txt
 airflow/dags/code/*.json
