--- a/dbt/dbt-postgres/dbt_project.yml
+++ b/dbt/dbt-postgres/dbt_project.yml
@@ -35,6 +35,6 @@ models:
   real_estate_properties:
     staging:
       schema: staging
-    summaries:
-      schema: summaries
+    core:
+      schema: core
 
