--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -324,5 +324,17 @@ services:
     environment:
       - TZ=Etc/GMT
 
+  flask:
+    image: docker_flask
+    container_name: flask
+    build: ./flask/
+    volumes:
+      - type: bind
+        source: /C/Users/minim/zoomcamp/final_project/Real_Estate_Pipeline/flask
+        target: /app
+    ports:
+      - "8086:80"
+
+
 volumes:
   postgres-db-volume:
