--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,14 +61,13 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-    DBT_PROFILES_DIR: /opt/airflow/dbt-postgres
   env_file:
     - .env
   volumes:
     - ./airflow/dags:/opt/airflow/dags
     - ./airflow/logs:/opt/airflow/logs
     - ./airflow/plugins:/opt/airflow/plugins
-    - ./dbt/dbt-postgres:/opt/airflow/dbt-postgres
+    - ./dbt/dbt-postgres:${DBT_PROFILES_DIR}
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
